--- a/oishii/OiSHii/res/layout/time_listview.xml
+++ b/oishii/OiSHii/res/layout/time_listview.xml
@@ -21,6 +21,7 @@
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:gravity="center_vertical"
     android:paddingLeft="6dip"
+    android:layout_marginLeft="8dp"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:textColor="@android:color/black"
 />
